search loader - slider button visibility - search bug fixed

--- a/public/scss/components/_search.scss
+++ b/public/scss/components/_search.scss
@@ -48,4 +48,15 @@
         }
     }
 
+    &__loader{
+        position: absolute !important;
+        transform:scale(0.25);
+        right: -1rem;
+        top:-1rem;
+
+        @include query(tabp){
+            display: none !important;
+        }
+    }
+
 }
